<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.a32bluetooth.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/BtnBluetoothEnable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BluetoothEnable" />

    <Button
        android:id="@+id/BtnConnectedDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BluetoothConnectedDevices" />

    <Button
        android:id="@+id/BtnStartDiscovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartDiscovery" />

    <Button
        android:id="@+id/BtnMakeDiscoverable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MakeDiscoverable" />

    <Button
        android:id="@+id/BtnBluetoothServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BluetoothServer" />

    <Button
        android:id="@+id/BtnBluetoothClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BluetoothClient" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>
</LinearLayout>
